# jvs_phase1

./: .env.example  .gitignore  AGENTS.md  JEEVES_BEHAVIOR.md  JEEVES_PROJECT_SPEC.md  Makefile  README.md  github_safe_first_push.command  pyproject.toml
app/: __init__.py  db.py  main.py  settings.py  ui_shell.py
app/agents/: __init__.py  communication_rule_agent.py  execution_agent.py  intent_agent.py  memory_agent.py  normalization_agent.py
app/api/: __init__.py  chat.py  deps.py  dev.py  memory.py  profile.py  ui_state.py
app/dev/: __init__.py  stub_agents.py
app/domain/: __init__.py  chat_state.py  communication_rule.py  core_profile.py  correction_memory.py  execution_decision.py  memory_candidate.py  memory_entry.py  normalized_user_request.py  turn_intent.py
app/graph/: __init__.py  graph_factory.py  main_chat_graph.py  memory_graph.py
app/llm/: __init__.py  deepseek_openai_model.py  fallback.py
app/repositories/: __init__.py  chat_repository.py  communication_rule_repository.py  memory_repository.py  models.py  profile_repository.py
app/services/: __init__.py  chat_orchestrator.py  chat_service.py  communication_rule_service.py  execution_service.py  (+2 more)
data/: jeeves.db
docs/: MEMORY_FIELD_SCHEMA.md  MEMORY_MILESTONE_2.md  MEMORY_NEXT_STEP_DIRECTION.md  MEMORY_UPDATE_RULES.md  PHASE1_MEMORY.md  PROBABILISTIC_MEMORY_CONTRACT.md  UNDERSTANDING_FLOW.md
jeeves.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: smoke_test.sh
tests/: test_core_flow.py  test_db_config.py  test_dev_ux.py
ui/: __init__.py  streamlit_app.py
(+3 files in other folders)
